2012-10-16  Florian Weimer  <fweimer@redhat.com>

	[BZ #14700]
	* sysdeps/posix/opendir.c (MAX_DIR_BUFFER_SIZE): New constant.
	(__alloc_dir): Limit buffer to MAX_DIR_BUFFER_SIZE.

2012-10-16  Maxim Kuvyrkov  <maxim@codesourcery.com>

	* NEWS: Mention BZ #14716.
	* string/str-two-way.h (two_way_short_needle): Fix thinko introduced
	when removing AVAILABLE1_USES_J macro.

2012-10-12  H.J. Lu  <hongjiu.lu@intel.com>

	* sysdeps/x86/bits/byteswap.h: Include <bits/types.h>.
	(__bswap_64): __uint64_t for unsigned 64-bit int.

2012-10-12  Andreas Schwab  <schwab@linux-m68k.org>

	* include/string.h (memmem): Declare libc hidden alias.
	* string/memmem.c (memmem): Define libc hidden alias.
	* sysdeps/unix/sysv/linux/powerpc/get_clockfreq.c: Use __open,
	__read, __close instead of open, read, close.

2012-10-11  H.J. Lu  <hongjiu.lu@intel.com>

	* sysdeps/x86_64/multiarch/ifunc-impl-list.c: New file.
	* sysdeps/x86_64/multiarch/memcmp.S (__memcmp_sse2): Make it
	global and hidden.
	* sysdeps/x86_64/multiarch/memcpy.S (__memcpy_sse2): Likewise.
	* sysdeps/x86_64/multiarch/mempcpy.S (__mempcpy_sse2): Likewise.
	* sysdeps/x86_64/multiarch/rawmemchr.S (__rawmemchr_sse42):
	Likewise.
	(__rawmemchr_sse2): Likewise.
	* sysdeps/x86_64/multiarch/strcat.S (STRCAT_SSE2): Likewise.
	* sysdeps/x86_64/multiarch/strchr.S (__strchr_sse42): Likewise.
	(__strchr_sse2): Likewise.
	* sysdeps/x86_64/multiarch/strcmp-sse42.S (STRCMP_SSE42): Likewise.
	* sysdeps/x86_64/multiarch/strcmp.S (STRCMP_SSE2): Likewise.
	(__strcasecmp_sse2): Likewise.
	(__strncasecmp_sse2): Likewise.
	* sysdeps/x86_64/multiarch/strcpy.S (STRCPY_SSE2): Likewise.
	* sysdeps/x86_64/multiarch/strlen.S (__strlen_sse2): Likewise.
	* sysdeps/x86_64/multiarch/strnlen.S (__strnlen_sse2): Likewise.
	* sysdeps/x86_64/multiarch/strrchr.S (__strrchr_sse42): Likewise.
	(__strrchr_sse2): Likewise.
	* sysdeps/x86_64/multiarch/memcmp.S: Add comments for
	ifunc-impl-list.c.
	* sysdeps/x86_64/multiarch/memcpy.S: Likewise.