@@ -5015,7 +5015,6 @@ gamma_test (void)
   if (errno == ENOSYS)
     /* Function not implemented.  */
     return;
-  feclearexcept (FE_ALL_EXCEPT);
 
   START (gamma);
 
@@ -5531,7 +5530,6 @@ lgamma_test (void)
   if (errno == ENOSYS)
     /* Function not implemented.  */
     return;
-  feclearexcept (FE_ALL_EXCEPT);
 
   START (lgamma);
 
@@ -9346,7 +9344,6 @@ tgamma_test (void)
   if (errno == ENOSYS)
     /* Function not implemented.  */
     return;
-  feclearexcept (FE_ALL_EXCEPT);
 
   START (tgamma);
 
